App building with better typing